<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/blue"
            android:textSize="30dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/house_foreground" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/blue"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_below="@+id/ll_1"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_email"
        android:background="@drawable/rounded_edit_text"
        android:paddingVertical="5dp"
        android:paddingHorizontal="15dp"
        android:layout_centerHorizontal="true"/>


    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/blue"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_below="@id/et_email"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"/>


    <EditText
        android:id="@+id/et_password"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_password"
        android:background="@drawable/rounded_edit_text"
        android:paddingVertical="5dp"
        android:layout_centerHorizontal="true"
        android:radius="10dp"
        android:paddingHorizontal="15dp"
        android:inputType="textPassword"/>



    <TextView
        android:id="@+id/et_recoverPassword"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginTop="10dp"
        android:text="@string/recover_password"
        android:textColor="@color/blue"
        android:textSize="15dp"
        android:layout_below="@id/et_password"
        android:paddingHorizontal="50dp"/>



    <Button
        android:id="@+id/btnLogin"
        android:textSize="14dp"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_button"
        android:onClick="btnLogin"
        android:text="@string/login"
        android:layout_below="@+id/et_recoverPassword"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnConta"
        android:onClick="btnRegister"
        android:textSize="14dp"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_button"
        android:text="@string/create_account"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>