<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26dp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:text="@string/create_account"
        android:layout_marginVertical="50dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/blue"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_below="@id/title"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_email"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_edit_text"
        android:inputType="textEmailAddress"
        android:paddingVertical="5dp"
        android:paddingHorizontal="15dp"
        android:radius="10dp" />


    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/blue"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_below="@+id/et_email"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"
        android:onClick="btnCreateAccount" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_username"
        android:background="@drawable/rounded_edit_text"
        android:paddingVertical="5dp"
        android:paddingHorizontal="15dp"
        android:layout_centerHorizontal="true"/>


    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/blue"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_below="@id/et_username"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"/>


    <EditText
        android:id="@+id/et_password"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_password"
        android:background="@drawable/rounded_edit_text"
        android:paddingVertical="5dp"
        android:paddingHorizontal="15dp"
        android:layout_centerHorizontal="true"
        android:radius="10dp"
        android:inputType="textPassword" />



    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="147dp"
        android:background="@drawable/rounded_button"
        android:onClick="btnCreateAccount"
        android:text="@string/create_account"
        android:textSize="14dp" />

    <Button
        android:id="@+id/btn_return"
        android:onClick="btnReturn"
        android:textSize="14dp"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_button"
        android:text="@string/go_back"
        android:layout_below="@+id/btn_create_account"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>