<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateRoomActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingTop="20dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_back_ios_new_24"
                    app:tint="@color/blue"
                    android:onClick="btnVoltar"
                    android:paddingRight="50dp" />

                <TextView
                    android:id="@+id/tv_criar_anuncio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginVertical="5dp"
                    android:text="@string/create_announcement"
                    android:textColor="@color/blue"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>



            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_below="@+id/ll_header"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="14dp"
                android:paddingTop="15dp"
                android:layout_marginVertical="5dp"/>

            <EditText
                android:id="@+id/et_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_titulo"
                android:background="@drawable/rounded_edit_text"
                android:paddingVertical="5dp"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="15dp"/>


            <TextView
                android:id="@+id/tv_descricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descricao"
                android:layout_below="@+id/et_titulo"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="14dp"
                android:layout_marginVertical="5dp"/>

            <EditText
                android:id="@+id/et_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_descricao"
                android:background="@drawable/rounded_edit_text"
                android:paddingVertical="5dp"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="15dp"/>

            <TextView
                android:id="@+id/tv_categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:layout_below="@+id/et_descricao"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="14dp"
                android:layout_marginVertical="5dp"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_categoria"
                android:background="@drawable/rounded_edit_text"
                android:paddingVertical="5dp" />

            <TextView
                android:id="@+id/tv_localizacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:layout_below="@+id/spinner"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="14dp"
                android:layout_marginVertical="5dp"/>

            <EditText
                android:id="@+id/et_localizacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_localizacao"
                android:background="@drawable/rounded_edit_text"
                android:paddingVertical="5dp"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="15dp"/>

            <TextView
                android:id="@+id/tv_preco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_below="@+id/et_localizacao"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="14dp"
                android:layout_marginVertical="5dp"/>

            <EditText
                android:id="@+id/et_preco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_preco"
                android:background="@drawable/rounded_edit_text"
                android:paddingVertical="5dp"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="15dp"/>

            <TextView
                android:id="@+id/tv_contacto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacto"
                android:layout_below="@+id/et_preco"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="14dp"
                android:layout_marginVertical="5dp"/>

            <EditText
                android:id="@+id/et_contacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_contacto"
                android:background="@drawable/rounded_edit_text"
                android:paddingVertical="5dp"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="15dp"/>


            <TextView
                android:id="@+id/tv_tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:layout_below="@id/et_contacto"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="14dp"
                android:layout_marginVertical="5dp"/>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ll_tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_tipo"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp">

                <RadioButton
                    android:id="@+id/venda"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/selling"
                    android:textColor="@color/blue"
                    android:buttonTint="@color/blue"
                    android:textStyle="bold"
                    android:textSize="12dp" />

                <RadioButton
                    android:id="@+id/arrendamento"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/rent"
                    android:textColor="@color/blue"
                    android:buttonTint="@color/blue"
                    android:textStyle="bold"
                    android:textSize="12dp"/>

            </RadioGroup>

            <TextView
                android:id="@+id/tv_imagem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/image"
                android:layout_below="@+id/ll_tipo"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="14dp"
                android:layout_marginVertical="5dp"/>

            <Button
                android:id="@+id/btn_ficheiros"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/select_files"
                android:layout_below="@id/tv_imagem"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="5dp"
                android:onClick="selecionarFicheiros"
                android:drawableLeft="@drawable/baseline_file_upload_24"
                android:drawableTint="@color/white"
                />


            <TextView
                android:id="@+id/tv_caracteristicas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/features"
                android:layout_below="@+id/btn_ficheiros"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="14dp"
                android:layout_marginVertical="5dp"/>


            <RelativeLayout
                android:id="@+id/rl_caracteristicas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_caracteristicas"
                android:paddingHorizontal="50dp"
                android:layout_marginVertical="5dp">

                <LinearLayout
                    android:id="@+id/ll_AC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginVertical="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/baseline_wind_power_24"
                        android:paddingHorizontal="10dp"
                        android:layout_marginHorizontal="5dp"
                        android:background="@drawable/rounded_icon_blue"
                        app:tint="@color/white"/>

                    <TextView
                        android:id="@+id/tv_AC"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ar_condicionado"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:textSize="14dp"
                        android:layout_marginVertical="5dp"
                        android:layout_marginHorizontal="5dp"/>

                    <CheckBox
                        android:id="@+id/arCondicionadoCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>



                <LinearLayout
                    android:id="@+id/ll_wifi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_AC"
                    android:layout_marginVertical="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/baseline_wifi_24"
                        android:paddingHorizontal="10dp"
                        android:layout_marginHorizontal="5dp"
                        android:background="@drawable/rounded_icon_blue"
                        app:tint="@color/white"/>

                    <TextView
                        android:id="@+id/tv_wifi"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/wi_fi"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:textSize="14dp"
                        android:layout_marginVertical="5dp"
                        android:layout_marginHorizontal="5dp"/>

                    <CheckBox
                        android:id="@+id/wifiCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_maquinas_lavar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_wifi"
                    android:layout_marginVertical="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/baseline_water_drop_24"
                        android:paddingHorizontal="10dp"
                        android:layout_marginHorizontal="5dp"
                        android:background="@drawable/rounded_icon_blue"
                        app:tint="@color/white"/>

                    <TextView
                        android:id="@+id/tv_maquinas_lavar"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/maquina_lavar"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:textSize="14dp"
                        android:layout_marginVertical="5dp"
                        android:layout_marginHorizontal="5dp"/>

                    <CheckBox
                        android:id="@+id/maquilaLavarCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_mobilia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_maquinas_lavar"
                    android:layout_marginVertical="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/baseline_bed_24"
                        android:paddingHorizontal="10dp"
                        android:layout_marginHorizontal="5dp"
                        android:background="@drawable/rounded_icon_blue"
                        app:tint="@color/white"/>

                    <TextView
                        android:id="@+id/tv_mobilia"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/mobilia"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:textSize="14dp"
                        android:layout_marginVertical="5dp"
                        android:layout_marginHorizontal="5dp"/>

                    <CheckBox
                        android:id="@+id/mobiliaCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>

            </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:layout_below="@+id/rl_caracteristicas"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="10dp"
                android:onClick="btnCriar"/>


        </RelativeLayout>







    </ScrollView>

</RelativeLayout>